Added Footer (CSS)

--- a/assets/index.css
+++ b/assets/index.css
@@ -22,6 +22,7 @@
 #website {
   max-width: 1400px;
   margin: 0 auto;
+  position: relative;
 }
 
 /* HEADER -------------------*/
@@ -83,13 +84,11 @@ h1 {
 
 main {
   width: 90%;
-  height: 220vh;
-  margin: 100px auto;
+  margin: 100px auto 200px auto;
 }
 #grid {
   width: 100%;
   text-align: center;
-  height: 220vh;
   display: grid;
   grid-template-columns: 20% 30% 1fr;
   grid-template-rows: 25% 25% 30% 1fr;
@@ -120,3 +119,52 @@ main {
 }
 
 /* GRID-------------- */
+
+/* FOOTER --------------- */
+
+footer {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  width: 95%;
+  margin: 20px auto;
+}
+
+article {
+  width: 50%;
+  padding: 20px 50px 25vh 50px;
+  position: relative;
+}
+
+footer h2 {
+  font-family: PT-Heading-Bold;
+  font-size: 4rem;
+  margin-bottom: 20px;
+}
+footer p {
+  font-family: PT-Text;
+  font-size: 1.4rem;
+}
+
+#footer-img {
+  background-image: url(./footer.jpg);
+  background-size: cover;
+  width: 50%;
+}
+
+#zemeckis {
+  font-size: 10vh;
+  font-family: PT-Text;
+  color: rgb(255, 255, 255);
+  letter-spacing: 3px;
+
+  position: absolute;
+  bottom: 3vh;
+  right: -262px;
+}
+
+span {
+  color: rgb(83, 255, 241);
+}
+
+/* FOOTER --------------- */
