--- a/assets/mobile.css
+++ b/assets/mobile.css
@@ -13,7 +13,7 @@ header {
 }
 
 main {
-  margin-top: 30px;
+  margin: 30px auto 50px auto;
 }
 
 #grid {
@@ -112,9 +112,32 @@ main {
 }
 /* RIGHT-SIDE */
 
+/* FOOTER--------------------------------- */
+
+footer {
+  display: flex;
+  flex-direction: column;
+}
+
+article {
+  width: 100%;
+  padding: 20px 50px 20px 50px;
+}
+
+#footer-img {
+  background-image: url(./footer.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 40vh;
+}
 #zemeckis {
   all: initial;
+  color: rgb(104, 255, 240);
+  font-size: 6vh;
+  font-family: PT-Text;
+  text-align: center;
 }
+/* FOOTER--------------------------------- */
 
 @media only screen and (max-width: 500px) {
   :root {
@@ -128,5 +151,44 @@ main {
 
   .grid-paragraph {
     padding: 10px 10px;
+  }
+
+  #zemeckis {
+    all: initial;
+    color: rgb(104, 255, 240);
+    font-size: 5vh;
+    font-family: PT-Text;
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  #grid {
+    all: initial;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .step-photo {
+    height: 250px;
+    margin-top: 18px;
+    margin-bottom: 18px;
+  }
+
+  .grid-paragraph {
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+
+  article h2 {
+    text-align: center;
+  }
+  article p {
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  #zemeckis {
+    font-size: 4vh;
   }
 }
